--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {},
   "engines": {
-    "node": ">=10"
+    "node": "^10.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
