--- a/package.json
+++ b/package.json
@@ -1,25 +1,75 @@
 {
-  "name": "app",
-  "version": "1.0.0",
-  "description": "Bot",
-  "main": "bot.js",
-  "dependencies": {
-    "chalk": "^3.0.0",
-    "discord.js": "^11.6.1",
-    "fs": "^0.0.2",
-    "moment": "^2.24.0",
-    "moment-duration-format": "^2.2.2",
-    "quick.db": "^6.3.2",
-    "parse-ms": "^2.0.0"
+  "//1": "describes your app and its dependencies",
+  "//2": "https://docs.npmjs.com/files/package.json",
+  "//3": "updating this file will download and update your packages",
+  "name": "hello-express",
+  "version": "0.0.1",
+  "description": "A simple Node app built on Express, instantly up and running.",
+  "main": "server.js",
+  "scripts": {
+    "start": "node bot.js``"
   },
-  "devDependencies": {},
+  "dependencies": {
+    "express": "^4.17.1",
+    "discord.js": "^11.5.1",
+    "chalk": "^3.0.0",
+    "moment": "^2.18.1",
+    "quick.db": "^6.3.2",
+    "simple-youtube-api": "^5.2.1",
+    "ytdl-core": "^1.0.3",
+    "canvas-constructor": "^3.1.0",
+    "canvas": "^2.6.1",
+    "moment-duration-format": "^1.3.0",
+    "get-artist-title": "^1.2.0",
+    "axios": "^0.19.0",
+    "cheerio": "^0.22.0",
+    "ejs": "^3.0.1",
+    "express-session": "^1.16.1",
+    "body-parser": "^1.19.0",
+    "passport": "^0.4.1",
+    "passport-discord": "^0.1.3",
+    "path": "^0.12.7",
+    "url": "^0.11.0",
+    "fs": "^0.0.2",
+    "morgan": "^1.9.1",
+    "google-translate-api": "^2.3.0",
+    "node-opus": "^0.3.2",
+    "opusscript": "^0.0.7",
+    "ffmpeg-binaries": "^4.0.0",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.7",
+    "firebase-admin": "^8.9.0",
+    "firebase-tools": "^7.11.0",
+    "firebase": "^7.6.1",
+    "heroku": "^7.35.1",
+    "yt-search": "^0.4.1",
+    "languagedetect": "^1.3.0",
+    "country-data": "^0.0.31",
+    "enmap": "^5.2.3",
+    "pm2": "^4.2.1",
+    "parse-ms": "^2.0.0",
+    "jimp": "^0.9.3",
+    "node-superfetch": "^0.1.9",
+    "common-tags": "^1.8.0",
+    "urban": "^0.3.2",
+    "enmap-mongo": "^1.0.3",
+    "ffmpeg": "^0.0.4",
+    "winston": "^3.2.1",
+    "better-sqlite3": "^5.4.3",
+    "passport-discord.js": "^0.0.6",
+    "performance-now": "^2.1.0",
+    "bodapi.js": "^1.0.2"
+  },
   "engines": {
     "node": "^10.2"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bot.js"
+  "repository": {
+    "url": "https://glitch.com/edit/#!/hello-express"
   },
-  "author": "",
-  "license": "ISC"
+  "license": "MIT",
+  "keywords": [
+    "node",
+    "glitch",
+    "express"
+  ]
 }
